Add comprehensive list view with search, filter, and detailed organization views
✨ New Features:
- List View button on main page for easy navigation
- Advanced search across organization names, contacts, emails, and descriptions
- Filter by organization type (Corporation, Higher Ed, Non-Profit, etc.)
- Sort by name, type, or contact person
- Beautiful organization cards with color-coded types
- Detailed organization modal with complete information
- Relationship mapping showing all connections
- Direct email integration
- Responsive design for mobile and desktop
- Smooth animations and hover effects

🎨 UI/UX Improvements:
- Modern card-based layout
- Color-coded organization types
- Interactive search with clear button
- Live results counter
- Modal popup for detailed views
- Keyboard navigation support
- Consistent styling with main app

🔧 Technical Enhancements:
- Separate list-view.js for clean code organization
- Dedicated list-styles.css for styling
- Efficient filtering and sorting algorithms
- Event handling for all interactive elements
- Error handling and loading states

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
             <button id="resetView" class="btn">Reset View</button>
             <button id="toggleLabels" class="btn">Toggle Labels</button>
+            <button id="listView" class="btn btn-secondary">List View</button>
         </div>
         
         <div class="visualization-container">
