--- a/list-view.html
+++ b/list-view.html
@@ -23,10 +23,13 @@
             <div class="filter-controls">
                 <select id="typeFilter">
                     <option value="">All Types</option>
-                    <option value="corporation">Corporation</option>
-                    <option value="higher_ed">Higher Education</option>
+                    <option value="corporation">Corporations & Industry</option>
+                    <option value="government_agency">Government & Public Agencies</option>
+                    <option value="education">Education</option>
                     <option value="non_profit">Non-Profit</option>
-                    <option value="government_agency">Government Agency</option>
+                    <option value="small_business">Entrepreneurs & Small Businesses</option>
+                    <option value="investor_funder">Investors & Funders</option>
+                    <option value="category">Categories</option>
                 </select>
                 
                 <select id="sortBy">
@@ -61,6 +64,6 @@
         </div>
     </div>
     
-    <script src="list-view.js"></script>
+    <script src="list-view.js?v=4"></script>
 </body>
 </html>
