--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecosystem Visualization</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link rel="stylesheet" href="styles.css?v=1">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
     <div class="container">
@@ -46,8 +46,11 @@
                 <div class="footer-left">
                     <img src="logo.png?v=2" alt="Tech Incubator at Queens College Logo" class="logo">
                 </div>
+                <div class="footer-center">
+                    <p class="copyright">© 2025 3cslab. All rights reserved.</p>
+                </div>
                 <div class="footer-right">
-                    <p class="contact-info">Contact: <a href="mailto:info@techincubatorqc.com">info@techincubatorqc.com</a></p>
+                    <p class="contact-info">Contact: <a href="mailto:info@3cslab.com">info@3cslab.com</a></p>
                 </div>
             </div>
         </footer>
