--- a/list-view.html
+++ b/list-view.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecosystem List View</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
     <link rel="stylesheet" href="list-styles.css">
 </head>
 <body>
@@ -55,8 +55,11 @@
                 <div class="footer-left">
                     <img src="logo.png?v=2" alt="Tech Incubator at Queens College Logo" class="logo">
                 </div>
+                <div class="footer-center">
+                    <p class="copyright">© 2025 3cslab. All rights reserved.</p>
+                </div>
                 <div class="footer-right">
-                    <p class="contact-info">Contact: <a href="mailto:info@techincubatorqc.com">info@techincubatorqc.com</a></p>
+                    <p class="contact-info">Contact: <a href="mailto:info@3cslab.com">info@3cslab.com</a></p>
                 </div>
             </div>
         </footer>
